# simple_modflow

./: __init__.py  pyproject.toml
modflow/: _triangle.0.node  _triangle.1.edge  _triangle.1.neigh  _triangle.1.poly  bottom_raster.tif  rlr_slope.csv  rlr_slope_road_cut.csv  scratch.ipynb  top_raster.tif
modflow/calcs/: cj_approximation.py
modflow/mf6/: bokeh_draw.py  boundaries.py  budgetplus.py  ghb.py  gis_functions.py  grasspyV.py  headsplus.py  interp_surface.tiff  interp_surface.tiff.aux.xml  lakes.py  mf2Dplots.py  mfsimbase.py  pump_times.xlsx  rast_contours.tif  recharge.py  run_times.xlsx  scratch.ipynb  sfr.dbf  sfr.ipynb  sfr.py  sfr.shp  sfr.shx  simplemodel.py  voronoiplus.py
modflow/mf6/maybe junk/: pump_run_times.ipynb
modflow/mf6/sample_model_output/: _triangle.0.node  _triangle.0.poly  _triangle.1.edge  _triangle.1.ele  _triangle.1.neigh  _triangle.1.node  l1_botm.tif  (+4 more)
modflow/mp3du/: LkPnt_1.4_rch.cbc  LkPnt_1.4_rch.disv.grb  LkPnt_1.4_rch.hds  LkPnt_1.4_rch.tdis  particles.py  writeP3DOutput.json
modflow/utils/: __init__.py  surfaces.py
simple_modflow/: _triangle.0.node  _triangle.0.poly  _triangle.1.edge  _triangle.1.ele  _triangle.1.neigh  _triangle.1.node  _triangle.1.poly  scratch.ipynb  top_raster.tif
simple_modflow/mf6/: _ai.py.ipynb  basefigures.py  boundaries.py  budgetplus.py  defs_mfHeads.py  functions_byluke.py  grasspyV.py  headsplus.py  mf2Dplots.py  mf3dplots.py  mfsimbase.py  paths.py  pump_tun_time_calcs.py  pyqgis.py  rast_contours.tif  recovery_analysis.py  run_times.html  scratch.ipynb  simplemodel.py  voronoiplus.py
(+12 files in other folders)
