[tool.poetry]
name = "simple-modflow"
version = "0.1.0"
description = ""
authors = ["lmioduszewski <luke.mioduszewski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flopy = "^3.4.3"
numpy = { version = "^1.26.0", python = ">=3.11,<3.13"}
scipy = { version = "^1.11.3", python = ">=3.11,<3.13"}
pandas = "^2.1.3"
plotly = "^5.18.0"
pathlib = "^1.0.1"
shapely = "^2.0.2"
geopandas = "^0.14.0"
flask = "^3.0.0"
rasterio = "^1.3.9"
jupyterlab = "^4.0.8"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
